Just add second modal to index.html

--- a/portfolio_emi.html
+++ b/portfolio_emi.html
@@ -39,8 +39,8 @@
             <h3>My Favorite App</h3>
             </div>
           <div class="col-md-6">
-            <img src="http://placekitten.com/g/555/300" class="img-responsive">
-            <h3>Appify2</h3>
+            <img src="http://placekitten.com/g/555/300" class="img-responsive" data-toggle="modal" data-target="#second">
+            <h3>My second App</h3>
             <p><a href="http://github.com/">Link to projects</a></p>
           </div>
         </div>
@@ -67,6 +67,24 @@
             <div class="modal-body">
               <img class="img-responsive" src="http://placekitten.com/g/555/300">
               This was my first project in this class. I learned a lot about HTML and CSS.
+              <a href="http://github.com/">Link to projects</a>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="second" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden='true'>
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+            </div>
+            <div class="modal-body">
+              <img class="img-responsive" src="http://placekitten.com/g/555/300">
+              This was my second project in this class. I learned a lot about HTML and CSS.
               <a href="http://github.com/">Link to projects</a>
             </div>
             <div class="modal-footer">
