--- a/portfolio_emi.html
+++ b/portfolio_emi.html
@@ -10,7 +10,7 @@
       <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet"> 
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/style.css">
-      <title>Emi Tsukuda</title>
+      <title>Yu Takado</title>
     </head>
     <body>
       <div class="container">
