Add third modal

--- a/portfolio_emi.html
+++ b/portfolio_emi.html
@@ -10,7 +10,7 @@
       <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet"> 
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/style.css">
-      <title>Yu Takado</title>
+      <title>Emi Tsukda</title>
     </head>
     <body>
       <div class="container">
@@ -51,7 +51,7 @@
             <p><a href="http://github.com/">Link to projects</a></p>
           </div>
           <div class="col-md-6">
-            <img src="http://placekitten.com/g/555/300" class="img-responsive">
+            <img src="http://placekitten.com/g/555/300" class="img-responsive" data-toggle="modal" data-target="#third">
             <h3>Appify2</h3>
             <p><a href="http://github.com/">Link to projects</a></p>
           </div>
@@ -85,6 +85,23 @@
             <div class="modal-body">
               <img class="img-responsive" src="http://placekitten.com/g/555/300">
               This was my second project in this class. I learned a lot about HTML and CSS.
+              <a href="http://github.com/">Link to projects</a>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="third" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden='true'>
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+            </div>
+            <div class="modal-body">
+              <img class="img-responsive" src="http://placekitten.com/g/555/300">
+              This was my third project in this class. I learned a lot about HTML and CSS.
               <a href="http://github.com/">Link to projects</a>
             </div>
             <div class="modal-footer">
